added princess menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                 <nav class="navbar">
                     <ul class="lista">
                         <li><a href="#" id="home">Home</a></li>
-                        <li><a href="princess.html">Princess</a></li>
+                        <li class="meniu"> <a href="#">Princess</a>
+                            <ul class="meniu-glisant">
+                                <li><a href="#"> Snow White</a></li>
+                                <li><a href="#"> Snow White</a></li>
+                                <li><a href="#"> Snow White</a></li>
+                                <li><a href="#"> Snow White</a></li>
+                            </ul>
+                        </li>
                         <div class="dreapta">
                             <li><a href="about.html" class="about">About</a></li>
                         </div>
