--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="content">
                 <nav class="navbar">
                     <ul class="lista">
-                        <li><a href="#" id="home">Home</a></li>
+                        <li><a id="home">Home</a></li>
                         <li class="meniu"> <a href="#">Princess</a>
                             <ul class="meniu-glisant">
                                 <li><a href="#"> Snow White</a></li>
